k8s/base/anbietermgmt/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anbietermgmt
spec:
  replicas = 3
  selector:
    matchLabels:
        app.kubernetes.io/name : anbietermgmt
  template:
    metadata:
      labels:
        app.kubernetes.io/name : anbietermgmt
    spec:
      containers:
      - name: anbietermgmt
        image: anbietermgmt
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
