k8s/base/anbietermgmt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: anbietermgmt
spec:
  selector:
    app.kubernetes.io/name: anbietermgmt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
