k8s/base/anbietermgmt/http-route-anbieter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anbietermgmt-route
spec:
  parentRefs:
    - name: booking-app-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /anbietermgmt
        - path:
            type: PathPrefix
            value: /room_summary
        - path:
            type: PathPrefix
            value: /add-room
        - path:
            type: PathPrefix
            value: /confirm-booking
        - path:
            type: PathPrefix
            value: /reject-booking
        - path:
            type: PathPrefix
            value: /cancelled-bookings
      backendRefs:
        - name: anbietermgmt
          port: 80
